force-app/main/default/objects/SML__Batch_Size_for_Campaign_Manager__c/SML__Batch_Size_for_Campaign_Manager__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>This custom setting is used to configure batch size for list view and report campaigns</description>
    <label>Batch Size for Campaign Manager</label>
</CustomObject>