force-app/main/default/objects/SML__Batch_Size_for_Campaign_Manager__c/fields/SML__Batch_Size_for_List_View__c.field-meta.xml
<CustomField>
    <fullName>SML__Batch_Size_for_List_View__c</fullName>
    <defaultValue>200</defaultValue>
    <description>Used to configure batch size for List View Campaigns.</description>
    <label>Batch Size for List View</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>