force-app/main/default/objects/SML__Batch_Size_for_Campaign_Manager__c/fields/SML__Batch_Size_for_Report__c.field-meta.xml
<CustomField>
    <fullName>SML__Batch_Size_for_Report__c</fullName>
    <defaultValue>70</defaultValue>
    <description>Used to configure batch size for Report Campaigns.</description>
    <label>Batch Size for Report</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>