force-app/main/default/objects/SML__Batch_Size_for_Campaign_Manager__c/fields/SML__Time_Lag_between_two_Jobs_in_seconds__c.field-meta.xml
<CustomField>
    <fullName>SML__Time_Lag_between_two_Jobs_in_seconds__c</fullName>
    <defaultValue>10</defaultValue>
    <description>Used to configure time lag between two scheduled jobs in seconds for report campaigns.</description>
    <label>Time Lag between two Jobs in seconds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>